# ImPlate

./: Dockerfile  Doxyfile  Makefile  README.md  clean.sh  install.sh  install_sudo.sh  test.sh
LPB/: Doxyfile  Makefile
LPB/src/: blur.cpp  main.cpp  main_corner.cpp  options.cpp  options.h  utils.cpp  utils.h
QT/BlurUI/: BlurUI_fr_FR.ts  CMakeLists.txt  TESUTO.sh  blur_failures.txt  blur_success.txt  config.h  customlabel.cpp  customlabel.h  log.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  processConfig.cpp  processConfig.h
backup/: Makefile.bk  install.sh  install_sudo.sh  main_gui.cpp.backup
program/: CMakeLists.txt  Doxyfile.in  Makefile  build.sh
program/doc/html/: README_8md.html  blur_8cpp.html  blur_8h.html  blur_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  main__corner_8cpp.html  menudata.js  options_8cpp.html  options_8h.html  options_8h_source.html  utils_8cpp.html  utils_8h.html  utils_8h_source.html
program/doc/html/search/: all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
program/doc/latex/: README_8md.tex  blur_8cpp.tex  blur_8h.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  index.tex  main_8cpp.tex  main__corner_8cpp.tex  options_8cpp.tex  options_8h.tex  refman.tex  utils_8cpp.tex  utils_8h.tex
program/src/: blur.cpp  config.h  main.cpp  main_corner.cpp  utils.cpp  utils.h
program/src/blur/: main.cpp  main_gui.cpp.backup
program/src/blur_gui/: CMakeLists.txt  config.h  mainwindow.cpp  mainwindow.ui  processConfig.cpp  processConfig.h
program/src/common/: blur.cpp  blur.h  config.h  options.cpp  options.h  utils.cpp  utils.h
runtime/: config.sh  initAutoBluring.sh  run.sh  run_gui.sh
src/: blur.cpp  blur.h  blur.hpp  main.cpp  options.cpp  options.h  options.hpp  utils.cpp  utils.h  utils.hpp
